--- a/web/css/ourpetstore.css
+++ b/web/css/ourpetstore.css
@@ -1,10 +1,12 @@
 body {
-    margin: 0ex 10ex 0ex 10ex;
+    margin: 0ex auto 0ex auto;
     padding: 0ex;
     font-family: helvetica, tahoma, arial, verdana, sans-serif;
     font-size: 2ex;
     color: #333;
     background-color: #444;
+    width: 1080px;
+
 }
 
 pre {
@@ -320,4 +322,31 @@ body>#Banner {
     float: left;
     background-color:#ccc;
     text-align:left;
+}
+
+#productAutoComplete{
+    background: #ccc;
+    position: relative;
+    top: -29px;
+    left: 84px;
+    width: 188px;
+    display: none;
+}
+
+#productAutoList{
+    margin: 0;
+    padding: 0;
+    border: 1px solid #aaa;
+}
+
+.productAutoItem{
+    list-style: none;
+    height: 20px;
+    line-height: 20px;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 5px;
+    margin-top: 5px;
+    border-bottom: 1px solid #666;
+    color: #005e21;
 }
