--- a/web/css/ourpetstore.css
+++ b/web/css/ourpetstore.css
@@ -6,7 +6,12 @@ body {
     color: #333;
     background-color: #444;
     width: 1080px;
+}
 
+#Footer {
+    position: fixed;
+    bottom: 0;
+    width: 1080px;
 }
 
 pre {
@@ -240,9 +245,9 @@ body>#Banner {
 }
 
 #Content {
-    margin: 0;
     padding: 0ex 0ex 0ex 0ex;
     width: 99%;
+    height: 79vh;
     color: #333;
     background-color: #FFF;
     border-width: 0;
@@ -340,17 +345,23 @@ body>#Banner {
 }
 
 .productAutoItem{
-    list-style: none;
-    height: 20px;
-    line-height: 20px;
-    font-size: 14px;
-    text-align: left;
-    padding-left: 5px;
-    margin-top: 5px;
-    border-bottom: 1px solid #666;
-    color: #005e21;
+    list-style: none !important;
+    height: 20px !important;
+    line-height: 20px !important;
+    font-size: 14px !important;
+    text-align: left !important;
+    padding-left: 5px !important;
+    margin-top: 5px !important;
+    border-bottom: 1px solid #666 !important;
+    color: #005e21 !important;
 }
+
 
 #isUserNameExistLabel{
     color: red;
+}
+
+.productAutoItem.highlighted {
+    color: blue; /* 文字颜色变为蓝色 */
+    text-decoration: underline; /* 添加下划线 */
 }
